# simple_terminal_banner

./: .coverage  .gitignore  CONTRIBUTING.MD  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/simple_terminal_banner/: examples.py
