[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple_terminal_banner"
version = "0.0.2-alpha"
authors = [
  { name="Stephen J. Graham", email="stephen@seesawweb.com" },
]
description = "Display a simple terminal banner."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/charlbury/simple_terminal_banner"
Issues = "https://github.com/charlbury/simple_terminal_banner/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_terminal_banner"]